[package]
name = "lunul-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
lunul-account-decoder = { workspace = true }
lunul-accounts-db = { workspace = true }
lunul-clap-utils = { workspace = true }
lunul-cli-config = { workspace = true }
lunul-client = { workspace = true }
lunul-faucet = { workspace = true }
lunul-gossip = { workspace = true }
lunul-logger = { workspace = true }
lunul-measure = { workspace = true }
lunul-net-utils = { workspace = true }
lunul-rpc-client = { workspace = true, features = ["default"] }
lunul-runtime = { workspace = true }
lunul-sdk = { workspace = true }
lunul-streamer = { workspace = true }
lunul-transaction-status = { workspace = true }
lunul-version = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
lunul-core = { workspace = true }
lunul-local-cluster = { workspace = true }
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }
lunul-test-validator = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
