[package]
name = "lunul-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
lunul-client = { workspace = true }
lunul-core = { workspace = true }
lunul-gossip = { workspace = true }
lunul-ledger = { workspace = true }
lunul-logger = { workspace = true }
lunul-measure = { workspace = true }
lunul-perf = { workspace = true }
lunul-poh = { workspace = true, features = ["dev-context-only-utils"] }
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }
lunul-sdk = { workspace = true }
lunul-streamer = { workspace = true }
lunul-tpu-client = { workspace = true }
lunul-version = { workspace = true }

[features]
dev-context-only-utils = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
