[package]
name = "lunul-banks-client"
description = "Solana banks client"
documentation = "https://docs.rs/lunul-banks-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
lunul-banks-interface = { workspace = true }
lunul-program = { workspace = true }
lunul-sdk = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[dev-dependencies]
lunul-banks-server = { workspace = true }
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[lib]
crate-type = ["lib"]
name = "lunul_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
