[package]
name = "lunul-banks-server"
description = "Solana banks server"
documentation = "https://docs.rs/lunul-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
lunul-banks-interface = { workspace = true }
lunul-client = { workspace = true }
lunul-runtime = { workspace = true }
lunul-sdk = { workspace = true }
lunul-send-transaction-service = { workspace = true }
lunul-svm = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "lunul_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
