[package]
name = "lunul-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
lunul-clap-utils = { workspace = true }
lunul-cli-config = { workspace = true }
lunul-client = { workspace = true }
lunul-connection-cache = { workspace = true }
lunul-core = { workspace = true }
lunul-faucet = { workspace = true }
lunul-genesis = { workspace = true }
lunul-gossip = { workspace = true }
lunul-logger = { workspace = true }
lunul-measure = { workspace = true }
lunul-metrics = { workspace = true }
lunul-net-utils = { workspace = true }
lunul-rpc = { workspace = true }
lunul-rpc-client = { workspace = true }
lunul-rpc-client-api = { workspace = true }
lunul-rpc-client-nonce-utils = { workspace = true }
lunul-runtime = { workspace = true }
lunul-sdk = { workspace = true }
lunul-streamer = { workspace = true }
lunul-tpu-client = { workspace = true }
lunul-transaction-status = { workspace = true }
lunul-version = { workspace = true }
spl-instruction-padding = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
lunul-local-cluster = { workspace = true }
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }
lunul-test-validator = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
