[package]
name = "lunul-bloom"
description = "Solana bloom filter"
documentation = "https://docs.rs/lunul-bloom"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
fnv = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
lunul-frozen-abi = { workspace = true }
lunul-frozen-abi-macro = { workspace = true }
lunul-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lunul_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
