[package]
name = "lunul-bucket-map"
description = "lunul-bucket-map"
documentation = "https://docs.rs/lunul-bucket-map"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true, features = ["derive"] }
log = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
lunul-measure = { workspace = true }
lunul-sdk = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
rayon = { workspace = true }
lunul-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lunul_bucket_map"

[[bench]]
name = "bucket_map"
