[package]
name = "lunul-cargo-registry"
description = "Solana cargo registry"
documentation = "https://docs.rs/lunul-cargo-registry"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true, features = ["full"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
lunul-clap-utils = { workspace = true }
lunul-cli = { workspace = true }
lunul-cli-config = { workspace = true }
lunul-cli-output = { workspace = true }
lunul-logger = { workspace = true }
lunul-remote-wallet = { workspace = true, features = ["default"] }
lunul-rpc-client = { workspace = true, features = ["default"] }
lunul-rpc-client-api = { workspace = true }
lunul-sdk = { workspace = true }
lunul-version = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []
