[package]
name = "lunul-cli-config"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lunul-cli-config"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dirs-next = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
lunul-clap-utils = { workspace = true }
lunul-sdk = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
