[package]
name = "lunul-cli-output"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lunul-cli-output"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
Inflector = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
clap = "2.33.0"
console = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
pretty-hex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lunul-account-decoder = { workspace = true }
lunul-clap-utils = { workspace = true }
lunul-cli-config = { workspace = true }
lunul-rpc-client-api = { workspace = true }
lunul-sdk = { workspace = true }
lunul-transaction-status = { workspace = true }
lunul-vote-program = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
