[package]
name = "lunul-cli"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lunul-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
lunul-account-decoder = { workspace = true }
lunul-bpf-loader-program = { workspace = true }
lunul-clap-utils = { workspace = true }
lunul-cli-config = { workspace = true }
lunul-cli-output = { workspace = true }
lunul-client = { workspace = true }
lunul-config-program = { workspace = true }
lunul-faucet = { workspace = true }
lunul-loader-v4-program = { workspace = true }
lunul-logger = { workspace = true }
lunul-program-runtime = { workspace = true }
lunul-pubsub-client = { workspace = true }
lunul-remote-wallet = { workspace = true, features = ["default"] }
lunul-rpc-client = { workspace = true, features = ["default"] }
lunul-rpc-client-api = { workspace = true }
lunul-rpc-client-nonce-utils = { workspace = true }
lunul-sdk = { workspace = true }
lunul-tpu-client = { workspace = true, features = ["default"] }
lunul-transaction-status = { workspace = true }
lunul-version = { workspace = true }
lunul-vote-program = { workspace = true }
lunul_rbpf = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
lunul-streamer = { workspace = true }
lunul-test-validator = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[[bin]]
name = "lunul"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
