[package]
name = "lunul-client-test"
description = "Solana RPC Test"
documentation = "https://docs.rs/lunul-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures-util = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
lunul-client = { workspace = true }
lunul-ledger = { workspace = true }
lunul-measure = { workspace = true }
lunul-merkle-tree = { workspace = true }
lunul-metrics = { workspace = true }
lunul-perf = { workspace = true }
lunul-pubsub-client = { workspace = true }
lunul-rayon-threadlimit = { workspace = true }
lunul-rpc = { workspace = true }
lunul-rpc-client = { workspace = true }
lunul-rpc-client-api = { workspace = true }
lunul-runtime = { workspace = true }
lunul-sdk = { workspace = true }
lunul-streamer = { workspace = true }
lunul-test-validator = { workspace = true }
lunul-transaction-status = { workspace = true }
lunul-version = { workspace = true }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
lunul-logger = { workspace = true }
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
