[package]
name = "lunul-client"
description = "Solana Client"
documentation = "https://docs.rs/lunul-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
lunul-connection-cache = { workspace = true }
lunul-measure = { workspace = true }
lunul-metrics = { workspace = true }
lunul-pubsub-client = { workspace = true }
lunul-quic-client = { workspace = true }
lunul-rpc-client = { workspace = true, features = ["default"] }
lunul-rpc-client-api = { workspace = true }
lunul-rpc-client-nonce-utils = { workspace = true }
lunul-sdk = { workspace = true }
lunul-streamer = { workspace = true }
lunul-thin-client = { workspace = true }
lunul-tpu-client = { workspace = true, features = ["default"] }
lunul-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
