[package]
name = "lunul-core"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lunul-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[badges]
codecov = { repository = "lunul-labs/lunul", branch = "master", service = "github" }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
eager = { workspace = true }
etcd-client = { workspace = true, features = ["tls"] }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
num_enum = { workspace = true }
prio-graph = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rolling-file = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
lunul-accounts-db = { workspace = true }
lunul-bloom = { workspace = true }
lunul-client = { workspace = true }
lunul-cost-model = { workspace = true }
lunul-entry = { workspace = true }
lunul-frozen-abi = { workspace = true }
lunul-frozen-abi-macro = { workspace = true }
lunul-geyser-plugin-manager = { workspace = true }
lunul-gossip = { workspace = true }
lunul-ledger = { workspace = true }
lunul-measure = { workspace = true }
lunul-metrics = { workspace = true }
lunul-net-utils = { workspace = true }
lunul-perf = { workspace = true }
lunul-poh = { workspace = true }
lunul-program-runtime = { workspace = true }
lunul-quic-client = { workspace = true }
lunul-rayon-threadlimit = { workspace = true }
lunul-rpc = { workspace = true }
lunul-rpc-client-api = { workspace = true }
lunul-runtime = { workspace = true }
lunul-sdk = { workspace = true }
lunul-send-transaction-service = { workspace = true }
lunul-streamer = { workspace = true }
lunul-svm = { workspace = true }
lunul-tpu-client = { workspace = true }
lunul-transaction-status = { workspace = true }
lunul-turbine = { workspace = true }
lunul-unified-scheduler-pool = { workspace = true }
lunul-version = { workspace = true }
lunul-vote = { workspace = true }
lunul-vote-program = { workspace = true }
lunul-wen-restart = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trees = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fs_extra = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
lunul-core = { path = ".", features = ["dev-context-only-utils"] }
lunul-logger = { workspace = true }
lunul-poh = { workspace = true, features = ["dev-context-only-utils"] }
lunul-program-runtime = { workspace = true }
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }
lunul-sdk = { workspace = true, features = ["dev-context-only-utils"] }
lunul-stake-program = { workspace = true }
static_assertions = { workspace = true }
systemstat = { workspace = true }
test-case = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []

[[bench]]
name = "banking_stage"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
