[package]
name = "lunul-cost-model"
description = "Solana cost model"
documentation = "https://docs.rs/lunul-cost-model"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
lunul-address-lookup-table-program = { workspace = true }
lunul-bpf-loader-program = { workspace = true }
lunul-compute-budget-program = { workspace = true }
lunul-config-program = { workspace = true }
lunul-frozen-abi = { workspace = true }
lunul-frozen-abi-macro = { workspace = true }
lunul-loader-v4-program = { workspace = true }
lunul-metrics = { workspace = true }
lunul-program-runtime = { workspace = true }
lunul-sdk = { workspace = true }
lunul-stake-program = { workspace = true }
lunul-system-program = { workspace = true }
lunul-vote-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lunul_cost_model"

[dev-dependencies]
lunul-logger = { workspace = true }
lunul-sdk = { workspace = true, features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
