[package]
name = "lunul-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
lunul-bench-tps = { workspace = true }
lunul-client = { workspace = true }
lunul-core = { workspace = true }
lunul-faucet = { workspace = true }
lunul-gossip = { workspace = true }
lunul-logger = { workspace = true }
lunul-measure = { workspace = true }
lunul-net-utils = { workspace = true }
lunul-perf = { workspace = true }
lunul-quic-client = { workspace = true }
lunul-rpc = { workspace = true }
lunul-rpc-client = { workspace = true }
lunul-sdk = { workspace = true }
lunul-streamer = { workspace = true }
lunul-tpu-client = { workspace = true }
lunul-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
lunul-local-cluster = { workspace = true }
