[package]
name = "lunul-download-utils"
description = "Solana Download Utils"
documentation = "https://docs.rs/lunul-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
console = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
lunul-runtime = { workspace = true }
lunul-sdk = { workspace = true }

[dev-dependencies]
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[lib]
crate-type = ["lib"]
name = "lunul_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
