[package]
name = "lunul-entry"
description = "Solana Entry"
documentation = "https://docs.rs/lunul-poh"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
dlopen2 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
lunul-measure = { workspace = true }
lunul-merkle-tree = { workspace = true }
lunul-metrics = { workspace = true }
lunul-perf = { workspace = true }
lunul-rayon-threadlimit = { workspace = true }
lunul-sdk = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
lunul-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lunul_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
