[package]
name = "lunul-genesis-utils"
description = "Solana Genesis Utils"
documentation = "https://docs.rs/lunul-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
lunul-accounts-db = { workspace = true }
lunul-download-utils = { workspace = true }
lunul-rpc-client = { workspace = true }
lunul-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "lunul_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
