[package]
name = "lunul-genesis"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lunul-genesis"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
lunul-accounts-db = { workspace = true }
lunul-clap-utils = { workspace = true }
lunul-cli-config = { workspace = true }
lunul-entry = { workspace = true }
lunul-ledger = { workspace = true }
lunul-logger = { workspace = true }
lunul-runtime = { workspace = true }
lunul-sdk = { workspace = true }
lunul-stake-program = { workspace = true }
lunul-version = { workspace = true }
lunul-vote-program = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[[bin]]
name = "lunul-genesis"
path = "src/main.rs"

[lib]
name = "lunul_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
