[package]
name = "lunul-geyser-plugin-interface"
description = "The Solana Geyser plugin interface."
documentation = "https://docs.rs/lunul-geyser-plugin-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
lunul-sdk = { workspace = true }
lunul-transaction-status = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
