[package]
name = "lunul-geyser-plugin-manager"
description = "The Solana Geyser plugin manager."
documentation = "https://docs.rs/lunul-geyser-plugin-manager"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
crossbeam-channel = { workspace = true }
json5 = { workspace = true }
jsonrpc-core = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
lunul-accounts-db = { workspace = true }
lunul-entry = { workspace = true }
lunul-geyser-plugin-interface = { workspace = true }
lunul-ledger = { workspace = true }
lunul-measure = { workspace = true }
lunul-metrics = { workspace = true }
lunul-rpc = { workspace = true }
lunul-runtime = { workspace = true }
lunul-sdk = { workspace = true }
lunul-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
