[package]
name = "lunul-gossip"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lunul-gossip"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
bv = { workspace = true, features = ["serde"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
itertools = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rustversion = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
lunul-bloom = { workspace = true }
lunul-clap-utils = { workspace = true }
lunul-client = { workspace = true }
lunul-connection-cache = { workspace = true }
lunul-entry = { workspace = true }
lunul-frozen-abi = { workspace = true }
lunul-frozen-abi-macro = { workspace = true }
lunul-ledger = { workspace = true }
lunul-logger = { workspace = true }
lunul-measure = { workspace = true }
lunul-metrics = { workspace = true }
lunul-net-utils = { workspace = true }
lunul-perf = { workspace = true }
lunul-rayon-threadlimit = { workspace = true }
lunul-runtime = { workspace = true }
lunul-sdk = { workspace = true }
lunul-streamer = { workspace = true }
lunul-tpu-client = { workspace = true }
lunul-version = { workspace = true }
lunul-vote = { workspace = true }
lunul-vote-program = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
num_cpus = { workspace = true }
serial_test = { workspace = true }
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }
test-case = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[[bench]]
name = "crds"

[[bench]]
name = "crds_gossip_pull"

[[bench]]
name = "crds_shards"

[[bin]]
name = "lunul-gossip"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
