[package]
name = "lunul-keygen"
description = "Solana key generation utility"
documentation = "https://docs.rs/lunul-keygen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
clap = { version = "3.1.5", features = ["cargo"] }
dirs-next = { workspace = true }
num_cpus = { workspace = true }
lunul-clap-v3-utils = { workspace = true }
lunul-cli-config = { workspace = true }
lunul-remote-wallet = { workspace = true, features = ["default"] }
lunul-sdk = { workspace = true }
lunul-version = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "lunul-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
