[package]
name = "lunul-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/lunul-ledger-tool"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
chrono = { workspace = true, features = ["default"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
csv = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
lunul-account-decoder = { workspace = true }
lunul-accounts-db = { workspace = true }
lunul-bpf-loader-program = { workspace = true }
lunul-clap-utils = { workspace = true }
lunul-cli-output = { workspace = true }
lunul-core = { workspace = true }
lunul-cost-model = { workspace = true }
lunul-entry = { workspace = true }
lunul-geyser-plugin-manager = { workspace = true }
lunul-gossip = { workspace = true }
lunul-ledger = { workspace = true }
lunul-logger = { workspace = true }
lunul-measure = { workspace = true }
lunul-program-runtime = { workspace = true }
lunul-rpc = { workspace = true }
lunul-runtime = { workspace = true, features = ["dev-context-only-utils"] }
lunul-sdk = { workspace = true }
lunul-stake-program = { workspace = true }
lunul-storage-bigtable = { workspace = true }
lunul-streamer = { workspace = true }
lunul-transaction-status = { workspace = true }
lunul-unified-scheduler-pool = { workspace = true }
lunul-version = { workspace = true }
lunul-vote-program = { workspace = true }
lunul_rbpf = { workspace = true, features = ["debugger"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
bytecount = { workspace = true }

[features]
dev-context-only-utils = []

[target."cfg(unix)".dependencies]
signal-hook = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
